<resources>
    <string name="app_name">EasyChef</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_fragment">Recipe</string>
    <string name="favorite_fragment">Favorite</string>
    <string name="settings_fragment">Settings</string>
    <string name="cart_fragment">Cart</string>
    <string name="recipe_view">Recipe View</string>
    <string name="add_recipe">Add recipe</string>
    <string name="dish_name_fragment">Dish name</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add_instruction">Add instruction</string>
    <string name="recipes">Recipes</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login now</string>
    <string name="remember">Dont remember password?</string>
    <string name="new_account">Dont have an account?</string>
    <string name="reg">Register</string>
    <string name="user_name">User name</string>
    <string name="user">CyborgKiller</string>
    <string name="user_email">cyborg@gmail.com</string>
    <string name="pass">12345678</string>
    <string name="again_pass">Password again</string>
    <string name="log_out">Log out</string>
    <string name="add_image_url">Add image url</string>

</resources>