<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/LightMint">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="108dp"
        android:background="@color/LightRose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:text="@string/reg"
        android:textColor="#745C4C"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:background="@color/LightMint"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/LightMint"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_userName"
                    android:layout_width="349dp"
                    android:layout_height="wrap_content"
                    android:background="@color/LightMint"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#745C4C"
                    android:textColorHint="#745C4C">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_userName"
                        android:layout_width="349dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/user_name"
                        android:text="@string/user"
                        android:textColor="#745C4C"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#745C4C"
                    android:textColorHint="#745C4C">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/regMail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/email"

                        android:text="@string/user_email"
                        android:textColor="#745C4C"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#745C4C"
                    android:textColorHint="#745C4C">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@string/pass"
                        android:textColor="#745C4C"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#745C4C"
                    android:textColorHint="#745C4C"

                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_passwordAgain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:hint="@string/again_pass"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@string/pass"
                        android:textColor="#745C4C"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>